--- a/Pages/EditDisbursement.cshtml
+++ b/Pages/EditDisbursement.cshtml
@@ -178,7 +178,7 @@
                                 <input type="text" name="SerialNumber" value="" class="form-control" id="SerialNumber">
                             </div> *@
                             <div class="form-group mb-4">
-                                <label>@Model.lblSerialNumber <b id="Serial">----</b></label>
+                                <label>@Model.lblSerialNumber <b id="Serial"> @Model.serialNo</b></label>
                                 <input type="number"  asp-for="Report.SerialNumber"  id="SerialNumber" name="SerialNumber" hidden>
                             </div>
                             @{
