--- a/Pages/Requests.cshtml
+++ b/Pages/Requests.cshtml
@@ -19,6 +19,7 @@
             </nav>
 
             <h2 class="h4">@Model.lblRequests</h2>
+    using Microsoft.EntityFrameworkCore;
             <!-- <p class="mb-0">Your web analytics dashboard template.</p>-->
         </div>
 
@@ -76,6 +77,10 @@
                                                 var sender = Model.AllUsers.FirstOrDefault(u => u.UserId == inbox.SenderId);  
                                                 var senderGroupName = sender != null 
                                                 ? Model.UserGroups.FirstOrDefault(g => g.UserGroupId == sender.UserGroupId)?.UserGroupName:"";  
+                                                
+                                                var report = Model.AllDispenseRequest.FirstOrDefault(r => r.RequestId == inbox.MaterialRequestId);
+                                                bool supervisorApproval = report != null? report.SupervisorApproval:false; 
+                                                        
                                                                                         
                                             }
                                             <div  class="m-2"><b>@sender?.FullName- </b>@inbox.Content</div>
@@ -138,17 +143,19 @@
                                                     @* case 2 Sender: Department Manager Receiver: Warehouse Keeper *@
                                                     else if(senderGroupName == "Department Manager" && Model.UserGroupName == "Warehouse Keeper"){
                                                         
-                                                        @* <button class="btn btn-info btn-sm p-1" data-toggle="modal" data-target="#specifyRecipient" onclick="setAcceptReportId(@inbox.MaterialRequestId, @inbox.Id)">
-                                                                Deduct Order form Item Card
-                                                        </button> *@
-                                                        <form method="post" class="d-inline">
+                                                     
+                                                        @* <form method="post" class="d-inline">
 
                                                   
                                                             <input type="hidden" value="@inbox.MaterialRequestId" name="DisReportId" />
                                                             <input type="hidden" value="@inbox.Id" id="MsgId" name="MsgId" />
                                                             
                                                             <button asp-page-handler="DeductOrder" class="btn btn-info btn-sm p-1"> Deduct Order form Item Card</button>
-                                                        </form>
+                                                        </form> *@
+
+                                                        <button class="btn btn-info btn-sm p-1" data-toggle="modal" data-target="#specifyRecipient" onclick="setAcceptReportId(@inbox.MaterialRequestId, @inbox.Id)">
+                                                                Accept
+                                                        </button>
 
                                                         <button class="btn btn-warning btn-sm p-1" data-toggle="modal" data-target="#commentRejectModal" onclick="setRejectReportId(@inbox.MaterialRequestId, @inbox.Id,'@inbox.ReportType')">
                                                             Comment & Reject
@@ -182,8 +189,25 @@
                                                         <button class="btn btn-warning btn-sm" data-toggle="modal" data-target="#commentRejectModal" onclick="setRejectReportId(@inbox.ReportId, @inbox.Id,'@inbox.ReportType')">Comment & Reject</button>
                                                     }
                                                     @* case 6 Sender: Supervisor  Receiver: keeper  *@
-                                                    else if(senderGroupName == "General Supervisor" && Model.UserGroupName == "Warehouse Keeper"){
+                                                
+                                                   
+                                                       
+                                                    
+
+                                                    else if(senderGroupName == "General Supervisor" && Model.UserGroupName == "Warehouse Keeper" && !supervisorApproval){
                                                         <button class="btn btn-info btn-sm" data-toggle="modal" data-target="#ReplyModal" onclick="setReplyReportId(@inbox.MaterialRequestId,'@inbox.SenderId',@inbox.Id,'@inbox.ReportType')">Reply & Resend</button>
+
+                                                        <button class="btn btn-warning btn-sm" data-toggle="modal" data-target="#commentRejectModal" onclick="setRejectReportId(@inbox.ReportId, @inbox.Id,'@inbox.ReportType')">Comment & Reject</button>
+                                                    }
+                                                    else if(senderGroupName == "General Supervisor" && Model.UserGroupName == "Warehouse Keeper" && supervisorApproval){
+                                                        <form method="post" class="d-inline">
+
+                                                  
+                                                            <input type="hidden" value="@inbox.MaterialRequestId" name="DisReportId" />
+                                                            <input type="hidden" value="@inbox.Id" id="MsgId" name="MsgId" />
+                                                            
+                                                            <button asp-page-handler="DeductOrder" class="btn btn-info btn-sm p-1"> Deduct Order form Item Card</button>
+                                                        </form>
 
                                                         <button class="btn btn-warning btn-sm" data-toggle="modal" data-target="#commentRejectModal" onclick="setRejectReportId(@inbox.ReportId, @inbox.Id,'@inbox.ReportType')">Comment & Reject</button>
                                                     }
