--- a/Pages/ReceivingReports.cshtml
+++ b/Pages/ReceivingReports.cshtml
@@ -262,8 +262,8 @@
                             </select>
                         </div>
                         <div class="form-group mb-4">
-                            <label>@Model.lblChiefResponsible</label>
-                            <select asp-for="Report.ChiefResponsibleId"  class="form-select" id="ChiefResponsible" name="ChiefResponsible" >
+                            <label>@Model.lblChiefResponsible</label> <span class="@(Model.IsMajesticUser() ? "majestic" : "text-white")">*</span>
+                            <select asp-for="Report.ChiefResponsibleId"  class="form-select" id="ChiefResponsible" name="ChiefResponsible">
                                  <option value="">Select General Supervisor</option>
                                 @if (Model.GeneralSupervisorList != null)
                                 {
